<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-parent-pom</artifactId>
        <version>1.0.0</version>
    </parent>

    <groupId>org.liquibase.ext</groupId>
    <artifactId>liquibase-ignite</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Liquibase Extension for Apache Ignite</name>
    <url>https://docs.liquibase.com</url>

    <licenses>
        <license>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <name>Apache License, Version 2.0</name>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Georg Romstorfer</name>
            <email>georg.romstorfer@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/romge/liquibase-ignite.git</connection>
        <developerConnection>scm:git:ssh://github.com:romge/liquibase-ignite.git</developerConnection>
        <url>https://github.com/romge/liquibase-ignite</url>
    </scm>

    <properties>
        <liquibase.version>5.0.1</liquibase.version>
        <ignite.version>3.1.0</ignite.version>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.ignite</groupId>
            <artifactId>ignite-jdbc</artifactId>
            <version>${ignite.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-commercial</artifactId>
            <version>4.32.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.snowflake</groupId>
            <artifactId>snowflake-jdbc</artifactId>
            <version>4.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>${jsonassert.version}</version>
            <scope>test</scope>
        </dependency><-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Test</include>
                        <include>**/*Tests</include>
                        <include>**/*Spec</include>
                        <include>**/*Suite</include>
                    </includes>
                    <classpathDependencyExcludes>
                        <exclude>org.liquibase.ext:liquibase-disable-analytics</exclude>
                    </classpathDependencyExcludes>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.access=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        -Dio.netty.tryReflectionSetAccessible=true
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
